Fix Contrast Errors in h1 of apply.html

--- a/project1/styles/styles.css
+++ b/project1/styles/styles.css
@@ -367,6 +367,7 @@ hr{color: #539ff5;}
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
+        background-color: #1A2341;
     
         padding: 2rem;
         display: flex; /* Align items in a row */
@@ -414,7 +415,7 @@ hr{color: #539ff5;}
     #submitBtn{
         color: #F7F6FF;
         font-size: 1.5em;
-        background-color: #539ff5;
+        background-color: #2764b4;
         width: 200px;
         height: 50px;
         border: none;
@@ -427,5 +428,5 @@ hr{color: #539ff5;}
     }
     
     #submitBtn:hover{
-        background-color: #2764b4;
+        background-color: #17249a;
     }
